tests/compile_fails/unknown_container_option.stderr
error: unknown dissolve attribute option 'unknown_option'; supported option: visibility
 --> tests/compile_fails/unknown_container_option.rs:4:12
  |
4 | #[dissolve(unknown_option = "value")]
  |            ^^^^^^^^^^^^^^
